2002-03-11  Roland McGrath  <roland@frob.com>

	* ftpfs.c (parse_startup_opt): If given one argument with no :,
	use "/" as the remote root.

2001-12-29  Roland McGrath  <roland@frob.com>

	* netfs.c (netfs_attempt_statfs): Implement this,
	returning all zeros except for f_type and f_fsid.

2001-12-22  Roland McGrath  <roland@frob.com>

	* fs.c (ftpfs_create): Move braces around to avoid warning.

2001-02-12  Marcus Brinkmann  <marcus@gnu.org>

	* ftpfs.c: Include <version.h>.  Add global variable
	ARGP_PROGRAM_VERSION.  Add period to DOC.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* dir.c (ftpfs_dir_create): Fix last change (calloc invocation).

2000-12-21  Marcus Brinkmann  <marcus@gnu.org>

	* dir.c (ftpfs_dir_create): New macro INIT_HTABLE_LEN to
	specify initialize htable_len. New variable htable,
	allocate memory to it with calloc before acquiring a node
	reference. If this fails, return any allocated memory and
	return with ENOMEM. Set new->htable_len to INIT_HTABLE_LEN
	and new->htable to htable. Don't bzero htable anymore, as
	we use calloc.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* netfs.c: Add #include <sys/mman.h> for munmap decl.
	* ccache.c: Likewise.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* ccache.c (ccache_read): Use mmap instead of vm_allocate.
	* netfs.c (get_dirents): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* ccache.c (ccache_read): Use munmap instead of vm_deallocate.
	(ccache_invalidate): Likewise.
	(ccache_free): Likewise.
	* netfs.c (get_dirents): Likewise.

Sun Jan 31 18:33:55 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* netfs.c (netfs_attempt_utimes): Implement new possibility that